# mcp-runner

./: .mcp.json  Cargo.toml  README.md
src/: main.rs  resources.rs  util.rs
src/http/: mod.rs
src/prompts/: blackmagic_probe_guide.md  gdb_guide.md  mod.rs  picocom_guide.md
src/tools/: mod.rs
