[package]
name = "mcp-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
axum = "0.8"
futures = "0.3"
async-stream = "0.3"
strip-ansi-escapes = "0.2"
ansi-to-html = "0.2"
rmcp = { version = "1.3", features = ["server", "transport-io", "elicitation", "schemars"] }
schemars = "1.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
pty-process = { version = "0.5", features = ["async"] }
